<resources>
    <integer name="google_play_services_version">12451000</integer>
    <string name="app_name">Emotion-Tracker</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name ="logout">LOGOUT</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="take_photo">Photo</string>
    <string name="login">LOGIN</string>
    <string name="back">BACK</string>
    <string name="register">REGISTER</string>
    <string name="hint_username">username</string>
    <string name="hint_password">password</string>
    <string name="image_description">My beautiful memory</string>
    <string name="record_video">Video</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_map">Open Map</string>
    <string name="emotion_tracker">Emotion Tracker</string>
    <string name="your_location">you are ...</string>
    <string name="profile_title">%s\'s profile</string>
    <string name="last_location_item">%s, %s, %s</string>
    <string name="happiness_index_title">your happiness index</string>
    <string name="happiness_index_value">%s</string>
    <string name="information_title">your information</string>
    <string name="locations_title">your latest locations</string>
    <string name="change_password">change password</string>
    <string name="profile_username">username: %s</string>
    <string name="profile_birthday">birthday: %s</string>
    <string name="old_password">Enter old password</string>
    <string name="new_password">Enter new password</string>
    <string name="change">CHANGE</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="r">R</string>
</resources>