<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity"
    android:id="@+id/drawerLayout">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/profile_title"
        android:textColor="#651FFF"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/profile_information"
        android:layout_width="201dp"
        android:layout_height="47dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/information_title"
        android:textColor="#651FFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/happiness_index"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.122" />

    <Button
        android:id="@+id/change_password_button"
        android:layout_width="107dp"
        android:layout_height="59dp"
        android:text="@string/change_password"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@+id/happiness_index"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/profile_information"
        app:layout_constraintVertical_bias="0.392" />

    <TextView
        android:id="@+id/username_profile"
        android:layout_width="180dp"
        android:layout_height="26dp"
        android:text="@string/profile_username"
        app:layout_constraintBottom_toTopOf="@+id/birthday_profile"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_information"
        app:layout_constraintVertical_bias="0.523" />

    <TextView
        android:id="@+id/birthday_profile"
        android:layout_width="180dp"
        android:layout_height="27dp"
        android:layout_marginBottom="12dp"
        android:text="@string/profile_birthday"
        app:layout_constraintBottom_toTopOf="@+id/happiness_index"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/happiness_index"
        android:layout_width="199dp"
        android:layout_height="43dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/happiness_index_title"
        android:textColor="#651FFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/last_locations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.621" />

    <TextView
        android:id="@+id/happiness_index_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/happiness_index_value"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/last_locations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.383"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/happiness_index"
        app:layout_constraintVertical_bias="0.547" />

    <ImageView
        android:id="@+id/happiness_face"
        android:layout_width="75dp"
        android:layout_height="77dp"
        app:layout_constraintBottom_toTopOf="@+id/last_locations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/happiness_index_value"
        app:layout_constraintTop_toBottomOf="@+id/happiness_index" />

    <TextView
        android:id="@+id/last_locations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/locations_title"
        android:textColor="#651FFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/location_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/location_list"
        android:layout_width="349dp"
        android:layout_height="165dp"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:scrollbarSize="4dp"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/fragment_container_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view"
        android:name="it.unipi.dii.emotion_tracker.CameraFragment"
        android:layout_width="190dp"
        android:layout_height="194dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout="@layout/fragment_camera" />

    <FrameLayout
        android:id="@+id/change_password_container"
        android:layout_width="410dp"
        android:layout_height="446dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/fragment_container_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"/>

</androidx.drawerlayout.widget.DrawerLayout>